--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,12 @@
             android:background="#78ff78"
             android:text="Play"/>
         <Button
+            android:id="@+id/but_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#9793ff"
+            android:text="Pause"/>
+        <Button
             android:id="@+id/but_stop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
