--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="center_vertical"
         android:layout_marginLeft="20dp"
         >
@@ -59,11 +59,16 @@
             android:layout_height="wrap_content"
             android:text="Playing Music: "
             />
-        <ProgressBar
-            android:id="@+id/prograss_ing"
+        <TextView
+            android:id="@+id/text_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
+            android:text="Playing Time: "
+            />
+        <SeekBar
+            android:id="@+id/prograss_ing"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             />
     </LinearLayout>
 </LinearLayout>
